log.txt
[1;34m[INFO][0m æ­£åœ¨è®¾ç½®ç¼–è¯‘çŽ¯å¢ƒ (Proton Clang)...
[1;34m[INFO][0m æ­£åœ¨ç¼–è¯‘ä½äºŽ /workspaces/Kernel_driver_hack/kernel çš„å†…æ ¸æ¨¡å—...
make: Entering directory '/workspaces/kernel_workspace/android-kernel'
make[1]: Entering directory '/workspaces/kernel_workspace/android-kernel/out'
  CC [M]  /workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.o
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:114:19: error: implicit declaration of function 'pte_mknotpresent' [-Werror,-Wimplicit-function-declaration]
    set_pte(ptep, pte_mknotpresent(*ptep));
                  ^
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:114:19: note: did you mean 'pte_mkpresent'?
../arch/arm64/include/asm/pgtable.h:190:21: note: 'pte_mkpresent' declared here
static inline pte_t pte_mkpresent(pte_t pte)
                    ^
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:114:19: error: passing 'int' to parameter of incompatible type 'pte_t'
    set_pte(ptep, pte_mknotpresent(*ptep));
                  ^~~~~~~~~~~~~~~~~~~~~~~
../arch/arm64/include/asm/pgtable.h:200:47: note: passing argument to parameter 'pte' here
static inline void set_pte(pte_t *ptep, pte_t pte)
                                              ^
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:202:17: error: implicit declaration of function 'pte_mknotpresent' [-Werror,-Wimplicit-function-declaration]
                pte_mknotpresent(current_bp->original_pte));
                ^
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:202:17: error: passing 'int' to parameter of incompatible type 'pte_t'
                pte_mknotpresent(current_bp->original_pte));
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../arch/arm64/include/asm/pgtable.h:200:47: note: passing argument to parameter 'pte' here
static inline void set_pte(pte_t *ptep, pte_t pte)
                                              ^
4 errors generated.
make[2]: *** [../scripts/Makefile.build:357: /workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.o] Error 1
make[1]: *** [/workspaces/kernel_workspace/android-kernel/Makefile:1752: _module_/workspaces/Kernel_driver_hack/kernel] Error 2
make[1]: Leaving directory '/workspaces/kernel_workspace/android-kernel/out'
make: *** [Makefile:146: sub-make] Error 2
make: Leaving directory '/workspaces/kernel_workspace/android-kernel'
